<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <TextView
        android:id="@+id/chahao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chahao"
        android:textSize="30sp"
        android:padding="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <!--第一行-->
    <TextView
        android:id="@+id/tv_phonelogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phonelogin"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chahao"
        />
    <!--第二行-->
    <TextView
        android:id="@+id/tv_nation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nation"
        android:textSize="20sp"
        android:layout_marginTop="40sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_phonelogin"
        app:layout_constraintTop_toBottomOf="@+id/tv_phonelogin"
        />
    <TextView
        android:id="@+id/China"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/China"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:layout_marginTop="40sp"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toRightOf="@id/tv_nation"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_nation"
        />
    <!--第三行-->
    <TextView
        android:id="@+id/phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phonenumber"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_phonelogin"
        app:layout_constraintTop_toBottomOf="@id/tv_nation"
        />
    <EditText
        android:id="@+id/writephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/writephone"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:inputType="number"
        android:ems="6"
        app:layout_constraintLeft_toLeftOf="@id/China"
        app:layout_constraintBaseline_toBaselineOf="@id/phonenumber"
        />
    <!--第四行-->
    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_phonelogin"
        app:layout_constraintTop_toBottomOf="@id/phonenumber"
        />
    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/writepassword"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:inputType="textPassword"
        android:ems="6"
        app:layout_constraintLeft_toLeftOf="@id/writephone"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_password"
        />
    <!--第五行-->
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wechat_login"
        android:textSize="25sp"
        android:enabled="false"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        />
</androidx.constraintlayout.widget.ConstraintLayout>