<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <TextView
        android:id="@+id/register_chahao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chahao"
        android:textSize="30sp"
        android:padding="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <!--第一行-->
    <TextView
        android:id="@+id/tv_phoneregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneregister"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_chahao"
        android:layout_marginStart="10dp" />
    <!--第二行-->
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:layout_marginTop="40sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_phoneregister"
        app:layout_constraintTop_toBottomOf="@+id/tv_phoneregister"
        />
    <EditText
        android:id="@+id/register_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:ems="5"
        android:hint="例如：陈晨"
        android:inputType="text"
        android:layout_marginTop="40sp"
        app:layout_constraintLeft_toLeftOf="@id/register_China"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_name"
        android:autofillHints="" />
    <ImageView
        android:id="@+id/register_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/icon"
        android:layout_marginRight="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_name"
        android:layout_marginEnd="10dp"
        android:contentDescription="TODO" />
    <!--第三行-->
    <TextView
        android:id="@+id/tv_register_nation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nation"
        android:textSize="20sp"
        android:layout_marginTop="40sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_phoneregister"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        />
    <TextView
        android:id="@+id/register_China"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/China"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:layout_marginTop="40sp"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toRightOf="@id/tv_register_nation"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_register_nation"
        android:layout_marginStart="15dp" />
    <!--第四行-->
    <TextView
        android:id="@+id/phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phonenumber"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_phoneregister"
        app:layout_constraintTop_toBottomOf="@id/tv_register_nation"
        />
    <EditText
        android:id="@+id/register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/writephone"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:inputType="number"
        android:ems="6"
        app:layout_constraintLeft_toLeftOf="@id/register_China"
        app:layout_constraintBaseline_toBaselineOf="@id/phonenumber"
        android:autofillHints="" />
    <!--第五行-->
    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_marginTop="40sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_phoneregister"
        app:layout_constraintTop_toBottomOf="@+id/phonenumber"
        />
    <EditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:ems="8"
        android:hint="填写密码"
        android:inputType="textPassword"
        android:textColor="@color/green"
        android:layout_marginTop="40sp"
        app:layout_constraintLeft_toLeftOf="@id/register_China"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_password"
        android:autofillHints="" />
    <!--第六行-->
    <CheckBox
        android:id="@+id/radiobutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="已阅读并同意"
        android:textSize="13sp"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        android:layout_marginStart="40dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="微信软件许可及服务协议"
        android:textSize="13sp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/purple_700"
        app:layout_constraintLeft_toRightOf="@id/radiobutton"
        app:layout_constraintBaseline_toBaselineOf="@id/radiobutton"
        android:layout_marginStart="5dp" />
    <!--第七行-->
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wechat_register"
        android:textSize="25sp"
        android:enabled="false"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@id/radiobutton"
        />
</androidx.constraintlayout.widget.ConstraintLayout>