<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UpFragment"
    android:background="#B4D5C3C3"
    android:id="@+id/fragment_up"
    >

    <TextView
        android:id="@+id/tv_wechat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/wechat"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="20sp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_wechat"
        />
    <TextView
        android:id="@+id/tv_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_wechat"
        />

</androidx.constraintlayout.widget.ConstraintLayout>